# Intership_project

scripts/: build.bat
src/: CMakeLists.txt  entry_point.cpp
src/core/: Application.cpp  Application.h  CMakeLists.txt  FileHelper.cpp  FileHelper.h  Prototype.h  StringHelper.cpp  StringHelper.h
src/figures/: CMakeLists.txt  FigureFactory.cpp  FigureFactory.h  abstract_factory.h  circle.cpp  circle.h  figure_factory.h  figures.h  random_figure_factory.cpp  random_figure_factory.h  rectangle.cpp  rectangle.h  shape.h  shape_input_factory.cpp  shape_input_factory.h  stdin_figure_factory.cpp  stdin_figure_factory.h  stream_figure_factory.cpp  stream_figure_factory.h  triangle.cpp  triangle.h
tests/: CMakeLists.txt  circle_tests.cpp  figure_factory_tests.cpp  rectangle_tests.cpp  shape_input_factory_tests.cpp  stream_factory_tests.cpp  string_helper_tests.cpp  triangle_tests.cpp
